--- a/movies_limpio.ipynb
+++ b/movies_limpio.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,9 +260,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>budget</th>\n",
+       "      <th>id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>production_countries</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>...</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>id_btc</th>\n",
+       "      <th>name_btc</th>\n",
+       "      <th>genero_id</th>\n",
+       "      <th>genero_nombre</th>\n",
+       "      <th>release_year</th>\n",
+       "      <th>return</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>30000000.0</td>\n",
+       "      <td>862</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>Pixar Animation Studios</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>373554033</td>\n",
+       "      <td>81</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>10194.0</td>\n",
+       "      <td>Toy Story Collection</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>Animation</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>12.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>65000000.0</td>\n",
+       "      <td>8844</td>\n",
+       "      <td>en</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>TriStar Pictures</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>262797249</td>\n",
+       "      <td>104</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Roll the dice and unleash the excitement!</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Comedy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>4.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15602</td>\n",
+       "      <td>en</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>11.712900</td>\n",
+       "      <td>Warner Bros.</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>0</td>\n",
+       "      <td>101</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>119050.0</td>\n",
+       "      <td>Grumpy Old Men Collection</td>\n",
+       "      <td>10751.0</td>\n",
+       "      <td>Family</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16000000.0</td>\n",
+       "      <td>31357</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
+       "      <td>3.859495</td>\n",
+       "      <td>Twentieth Century Fox Film Corporation</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>81452156</td>\n",
+       "      <td>127</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Friends are the people who let you be yourself...</td>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Adventure</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>5.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11862</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Just when George Banks has recovered from his ...</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>Sandollar Productions</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1995-02-10</td>\n",
+       "      <td>76578911</td>\n",
+       "      <td>106</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Just When His World Is Back To Normal... He's ...</td>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>96871.0</td>\n",
+       "      <td>Father of the Bride Collection</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>Fantasy</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       budget     id original_language  \\\n",
+       "0  30000000.0    862                en   \n",
+       "1  65000000.0   8844                en   \n",
+       "2         0.0  15602                en   \n",
+       "3  16000000.0  31357                en   \n",
+       "4         0.0  11862                en   \n",
+       "\n",
+       "                                            overview  popularity  \\\n",
+       "0  Led by Woody, Andy's toys live happily in his ...   21.946943   \n",
+       "1  When siblings Judy and Peter discover an encha...   17.015539   \n",
+       "2  A family wedding reignites the ancient feud be...   11.712900   \n",
+       "3  Cheated on, mistreated and stepped on, the wom...    3.859495   \n",
+       "4  Just when George Banks has recovered from his ...    8.387519   \n",
+       "\n",
+       "                     production_companies      production_countries  \\\n",
+       "0                 Pixar Animation Studios  United States of America   \n",
+       "1                        TriStar Pictures  United States of America   \n",
+       "2                            Warner Bros.  United States of America   \n",
+       "3  Twentieth Century Fox Film Corporation  United States of America   \n",
+       "4                   Sandollar Productions  United States of America   \n",
+       "\n",
+       "  release_date    revenue  runtime  ...  \\\n",
+       "0   1995-10-30  373554033       81  ...   \n",
+       "1   1995-12-15  262797249      104  ...   \n",
+       "2   1995-12-22          0      101  ...   \n",
+       "3   1995-12-22   81452156      127  ...   \n",
+       "4   1995-02-10   76578911      106  ...   \n",
+       "\n",
+       "                                             tagline  \\\n",
+       "0                                                NaN   \n",
+       "1          Roll the dice and unleash the excitement!   \n",
+       "2  Still Yelling. Still Fighting. Still Ready for...   \n",
+       "3  Friends are the people who let you be yourself...   \n",
+       "4  Just When His World Is Back To Normal... He's ...   \n",
+       "\n",
+       "                         title vote_average vote_count    id_btc  \\\n",
+       "0                    Toy Story          7.7     5415.0   10194.0   \n",
+       "1                      Jumanji          6.9     2413.0       NaN   \n",
+       "2             Grumpier Old Men          6.5       92.0  119050.0   \n",
+       "3            Waiting to Exhale          6.1       34.0       NaN   \n",
+       "4  Father of the Bride Part II          5.7      173.0   96871.0   \n",
+       "\n",
+       "                         name_btc  genero_id genero_nombre  release_year  \\\n",
+       "0            Toy Story Collection       16.0     Animation          1995   \n",
+       "1                             NaN       35.0        Comedy          1995   \n",
+       "2       Grumpy Old Men Collection    10751.0        Family          1995   \n",
+       "3                             NaN       12.0     Adventure          1995   \n",
+       "4  Father of the Bride Collection       14.0       Fantasy          1995   \n",
+       "\n",
+       "  return  \n",
+       "0  12.45  \n",
+       "1   4.04  \n",
+       "2   0.00  \n",
+       "3   5.09  \n",
+       "4   0.00  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Convertir los valores de id en entero ya que así estaban en el data credits\n",
     "df['id'] = df['id'].astype(int)\n",
@@ -271,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +758,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,25 +957,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El actor Robin Williams ha participado en 82 películas, logrando un retorno total de 155.66 con un promedio de 1.9 por película.\n"
+      "El actor John Travolta ha participado en 58 películas, logrando un retorno total de 231.17999999999995 con un promedio de 3.99 por película.\n"
      ]
     }
    ],
    "source": [
     "# Ejemplo de uso\n",
-    "nombre_actor = \"Robin Williams\"\n",
+    "nombre_actor = \"John Travolta\"\n",
     "resultado = get_actor(nombre_actor)\n",
     "print(resultado)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
+    "#Función para obtener el trabajo del director\n",
     "\n",
     "def get_director(nombre_director):\n",
     "    # Read the dataset that contains the movie information\n",
@@ -776,15 +1010,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Following', 1998, 8.08, 6000.0, 48482), ('Memento', 2000, 4.41, 9000000.0, 39723096), ('Insomnia', 2002, 2.47, 46000000.0, 113714830), ('Batman Begins', 2005, 2.49, 150000000.0, 374218673), ('The Prestige', 2006, 2.74, 40000000.0, 109676311), ('The Dark Knight', 2008, 5.43, 185000000.0, 1004558444), ('Inception', 2010, 5.16, 160000000.0, 825532764), ('The Dark Knight Rises', 2012, 4.34, 250000000.0, 1084939099), ('Man of Steel', 2013, 2.95, 225000000.0, 662845518), ('Interstellar', 2014, 4.09, 165000000.0, 675120017), ('Transcendence', 2014, 1.03, 100000000.0, 103039258), ('Doodlebug', 1997, 0.0, 0.0, 0), ('Batman v Superman: Dawn of Justice', 2016, 3.49, 250000000.0, 873260194), ('Dunkirk', 2017, 5.2, 100000000.0, 519876949)]\n"
+      "[('Strange Days', 1995, 0.19, 42000000.0, 7959291), ('True Lies', 1994, 3.29, 115000000.0, 378882411), ('Terminator 2: Judgment Day', 1991, 5.2, 100000000.0, 520000000), ('The Abyss', 1989, 1.29, 70000000.0, 90000098), ('Aliens', 1986, 9.91, 18500000.0, 183316455), ('The Terminator', 1984, 12.25, 6400000.0, 78371200), ('Titanic', 1997, 9.23, 200000000.0, 1845034188), ('Rambo: First Blood Part II', 1985, 6.83, 44000000.0, 300400432), ('Battle Beyond the Stars', 1980, 5.5, 2000000.0, 11000000), ('Point Break', 1991, 3.48, 24000000.0, 83531958), ('Galaxy of Terror', 1981, 0.0, 700000.0, 0), ('Piranha Part Two: The Spawning', 1981, 0.0, 145786.0, 0), ('Solaris', 2002, 0.64, 47000000.0, 30002758), ('Ghosts of the Abyss', 2003, 1.31, 13000000.0, 17040871), ('Terminator 3: Rise of the Machines', 2003, 2.17, 200000000.0, 435000000), ('Aliens of the Deep', 2005, 0.0, 0.0, 0), ('Avatar', 2009, -9.06, 237000000.0, -2147483648), ('Cirque du Soleil: Worlds Away', 2012, 0.0, 0.0, 34153101), ('Terminator Genisys', 2015, 2.84, 155000000.0, 440603537), ('Avatar 2', 2020, 0.0, 0.0, 0), ('Deepsea Challenge 3D', 2014, 0.0, 0.0, 0), ('Hannah Montana & Miley Cyrus: Best of Both Worlds Concert', 2008, 0.0, 0.0, 0), ('T2 3-D: Battle Across Time', 1996, 0.0, 0.0, 0), ('Titanic: The Final Word with James Cameron', 2012, 0.0, 0.0, 0)]\n"
      ]
     }
    ],
    "source": [
     "# Example usage\n",
-    "nombre_director = \"Christopher Nolan\"\n",
+    "nombre_director = \"James Cameron\"\n",
     "resultado = get_director(nombre_director)\n",
     "print(resultado)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jumanji', 'Tom and Huck', 'Sudden Death', 'Dracula: Dead and Loving It', 'Sense and Sensibility']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df = df_unido\n",
+    "\n",
+    "\n",
+    "def obtener_recomendaciones_peliculas(title):\n",
+    "    # Obtener el género de la película de entrada\n",
+    "    genero_pelicula = df[df['title'] == title]['genero_nombre'].values[0]\n",
+    "    # Filtrar las películas que coinciden con el género de la película de entrada\n",
+    "    peliculas_coincidentes = df[df['genero_nombre'] == genero_pelicula]\n",
+    "    # Excluir la película de entrada de las recomendaciones\n",
+    "    peliculas_recomendadas = peliculas_coincidentes[peliculas_coincidentes['title'] != title]\n",
+    "    # Obtener los primeros 5 títulos de películas recomendadas\n",
+    "    recomendaciones = peliculas_recomendadas['title'].head(5).tolist()\n",
+    "    return recomendaciones\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Balto', 'Ace Ventura: When Nature Calls', 'Assassins', 'Now and Then', 'Clueless']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Ejemplo de uso\n",
+    "titulo_pelicula = \"Gone in Sixty Seconds\"\n",
+    "recomendaciones = obtener_recomendaciones_peliculas(titulo_pelicula)\n",
+    "print(recomendaciones)\n"
    ]
   }
  ],
